--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore all env files in the backend directory
 backend/.env
-
+/node_modules
 # Ignore all env files in the root directory or any other directory
 .env
 .env*.local
