--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,7 @@ services:
     ports:
       - '8080:8080'
     environment:
-      MONGO_ADMIN_USERNAME: admin
-      MONGO_ADMIN_PASSWORD: password
+      MONGO_URL: mongodb://admin:password@mongodb:27017/profileFolio
     depends_on:
       - mongodb
 
