--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"start": "concurrently -n \"FRONTEND,BACKEND\" -c \"bgBlue,bgYellow\" -p \"[{name}]\" \"npm run start-frontend\" \"npm run start-backend\"",
 		"install-frontend": "cd frontend && npm install",
 		"install-backend": "cd backend && go mod tidy",
-		"installer": "npm install && npm run install-backend && npm run install-frontend",
-		"prepare": "husky install && chmod ug+x .husky/*"
+		"installer": "npm install && npm run install-backend && npm run install-frontend"
 	},
 	"devDependencies": {
 		"concurrently": "^7.0.0"
