--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Node.js image
-FROM node:18
+FROM node:22-alpine3.20
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -13,11 +13,8 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-# Build the Next.js application
-RUN npm run build
-
 # Expose port 3000
 EXPOSE 3000
 
 # Command to start the Next.js application
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
