feat: Change in the backend of the schema

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 	},
 	"keywords": [],
 	"author": "krishnaacharyaa",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"mongodb": "^6.7.0"
+	}
 }
