--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.7.0",
     "next": "14.2.4",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
