--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
 	},
 	"keywords": [],
 	"author": "krishnaacharyaa",
-	"license": "ISC",
-	"dependencies": {
-		"mongodb": "^6.7.0"
-	}
+	"license": "ISC"
 }
