--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,14 @@
 version: '3.8'
-
 services:
   mongodb:
     image: mongo:latest
-    container_name: db-mongodb
-    restart: always
+    container_name: mongodb
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
-    volumes:
-      - ./mongodb-init:/docker-entrypoint-initdb.d
+      MONGO_INITDB_DATABASE: profileFolio
     ports:
-      - '27017:27017'
+      - '27018:27017'
+    volumes:
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
 
   backend:
     container_name: backend-go
@@ -19,7 +16,7 @@ services:
     ports:
       - '8080:8080'
     environment:
-      MONGO_URL: mongodb://admin:password@mongodb:27017/profileFolio
+      MONGO_URL: mongodb://mongodb:27017/profileFolio
     depends_on:
       - mongodb
 
@@ -28,5 +25,9 @@ services:
     build: ./frontend
     ports:
       - '3000:3000'
+    environment:
+      NEXT_PUBLIC_BACKEND_URL: http://backend:8080
     depends_on:
       - backend
+# docker system prune --all
+# docker volume prune
