--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,9 +1,11 @@
 node_modules
 npm-debug.log
+Dockerfile
+.dockerignore
 .git
 .gitignore
+public
+dist
+.cache
 .next
-.vscode
-README.md
-.dockerignore
-next-env.d.ts
+frontend/node_modules
