chore: Added the comment in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
     environment:
       - NODE_ENV=development
       - NEXT_PUBLIC_BACKEND_URL=http://backend:8080
+      #if you’re using Windows, you may need to uncomment the next line - Sol from @Kobe E
+      #- WATCHPACK_POLLING=true
     volumes:
       - ./frontend:/app
       - /app/node_modules
