--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   mongodb:
     image: mongo:latest
@@ -6,7 +6,7 @@ services:
     environment:
       MONGO_INITDB_DATABASE: profileFolio
     ports:
-      - '27018:27017'
+      - "27018:27017"
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
 
@@ -14,7 +14,7 @@ services:
     container_name: backend-go
     build: ./backend
     ports:
-      - '8080:8080'
+      - "8080:8080"
     environment:
       MONGO_URL: mongodb://mongodb:27017/profileFolio
     depends_on:
@@ -24,7 +24,7 @@ services:
     container_name: frontend-next
     build: ./frontend
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
       NEXT_PUBLIC_BACKEND_URL: http://backend:8080
     depends_on:
