--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.13",
     "github-markdown-css": "^5.6.1",
     "lucide-react": "^0.399.0",
     "markdown-it": "^14.1.0",
@@ -38,7 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
