--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,3 @@
 MONGO_URL="mongodb://127.0.0.1/profileFolio"
-OPENAI_API_KEY=paste_key_here
+OPENAI_API_KEY=paste_key_here(optional)
+GEMINI_API_KEY=paste_key_here
