--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "github-markdown-css": "^5.6.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.399.0",
     "markdown-it": "^14.1.0",
     "next": "14.2.4",
