--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,5 @@
 MONGO_URL="mongodb://127.0.0.1/profileFolio"
 OPENAI_API_KEY=paste_key_here(optional)
 GEMINI_API_KEY=paste_key_here
+
+NEXTAUTH_SECRET=password_nextauth
