--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,5 +1,5 @@
 NEXTAUTH_URL = http://localhost:3000
-NEXTAUTH_SECRET = password_nextauth
+NEXTAUTH_SECRET=password_nextauth
 GOOGLE_ID = id
 GOOGLE_SECRET = id
 GITHUB_CLIENT_ID = id
