fix: Formfix/formfixed (#44)
Co-authored-by: Sukomal Dutta <100500478+Sukomal07@users.noreply.github.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -21,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@types/markdown-it": "^14.1.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -40,8 +42,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar": "^3.1.0",
