--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,9 +7,8 @@
 		}
 	],
 	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "/api/index.go"
-		}
+		{ "src": "/user", "dest": "/api/user.go" },
+		{ "src": "/cover-letter", "dest": "/api/cover_letter.go" },
+		{ "src": "/(.*)", "dest": "/api/index.go" }
 	]
 }
