--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^11.2.13",
     "github-markdown-css": "^5.6.1",
     "lucide-react": "^0.399.0",
+    "react-hot-toast": "2.4.1",
     "markdown-it": "^14.1.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
