--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@types/markdown-it": "^14.1.1",
     "axios": "^1.7.2",
@@ -32,7 +33,6 @@
     "framer-motion": "^11.2.13",
     "github-markdown-css": "^5.6.1",
     "lucide-react": "^0.399.0",
-    "react-hot-toast": "2.4.1",
     "markdown-it": "^14.1.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -43,6 +43,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "2.4.1",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
     "sonner": "^1.5.0",
