--- a/services/resume/.env
+++ b/services/resume/.env
@@ -1,1 +1,2 @@
 AI_API_KEY=AIzaSyAuksm3u4zZhpp2DrwAnOlm2Z4vd61IoiM
+DATABASE_URL=postgres://profilefolio_user:password@localhost:5432/profilefolio?sslmode=disable
