feat: UI finish

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
